syntax = "proto3";
package vault.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/provlabs/vault/types";

// EventDeposit is an event emitted when assets are deposited into a vault.
message EventDeposit {
  // caller is the address of the account that initiated the deposit.
  string caller = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // owner is the address of the account that will receive the minted shares.
  string owner = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // assets is the coins amount string of the underlying assets that were deposited.
  string assets = 3;
  // shares is the coins amount string of the vault shares that were minted.
  string shares = 4;
  // vault_id is the numerical identifier of the vault.
  uint32 vault_id = 5;
}

// EventWithdraw is an event emitted when assets are withdrawn from a vault.
message EventWithdraw {
  // caller is the address of the account that initiated the withdrawal.
  string caller = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // receiver is the address of the account that will receive the underlying assets.
  string receiver = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // owner is the address of the account from which the shares were burned.
  string owner = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // assets is the coins amount string of the underlying assets that were withdrawn.
  string assets = 4;
  // shares is the coins amount string of the vault shares that were burned.
  string shares = 5;
  // vault_id is the numerical identifier of the vault.
  uint32 vault_id = 6;
}

// EventVaultCreated is an event emitted when a vault is created.
message EventVaultCreated {
  // vault_address is the bech32 address of the vault.
  string vault_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // admin is the address of the account that manages the vault.
  string admin = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // share_denom is the name of the assets created by the vault used for distribution.
  string share_denom = 3;
  // underlying_assets is the denominations of the assets supported by the vault.
  repeated string underlying_assets = 4;
}

// EventSwapIn is an event emitted when assets are swapped in for vault shares.
message EventSwapIn {
  // owner is the address of the account that initiated the swap.
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // amount_in is the amount of underlying assets that were swapped in.
  cosmos.base.v1beta1.Coin amount_in = 2 [(gogoproto.nullable) = false];
  // shares_received is the amount of vault shares that were minted.
  cosmos.base.v1beta1.Coin shares_received = 3 [(gogoproto.nullable) = false];
  // vault_address is the bech32 address of the vault.
  string vault_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventSwapOut is an event emitted when vault shares are swapped out for underlying assets.
message EventSwapOut {
  // owner is the address of the account that initiated the swap.
  string owner = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // shares_burned is the amount of vault shares that were burned.
  cosmos.base.v1beta1.Coin shares_burned = 2 [(gogoproto.nullable) = false];
  // amount_out is the amount of underlying assets that were sent to the recipient.
  cosmos.base.v1beta1.Coin amount_out = 3 [(gogoproto.nullable) = false];
  // vault_address is the bech32 address of the vault.
  string vault_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// EventVaultInterestPeriodStart is an event emitted when an interest period starts for a vault.
message EventVaultInterestPeriodStart {
  // vault_address is the bech32 address of the vault.
  string vault_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // principal is the initial amount of principal.
  cosmos.base.v1beta1.Coin principal = 2 [(gogoproto.nullable) = false];
  // rate is the interest rate for the period.
  string rate = 3;
  // time is the payout time in seconds.
  int64 time = 4;
  // start_time is the time when the interest period started.
  google.protobuf.Timestamp start_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];
  // estimated_end_time is the estimated time when the interest period will end.
  google.protobuf.Timestamp estimated_end_time = 6 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];
}

// EventVaultInterestPeriodStop is an event emitted when an interest period stops for a vault.
message EventVaultInterestPeriodStop {
  // vault_address is the bech32 address of the vault.
  string vault_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // rate is the interest rate for the period.
  string rate = 2;
  // time is the payout time in seconds.
  int64 time = 3;
  // end_time is the time when the interest period ended.
  google.protobuf.Timestamp end_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = true
  ];
}

// EventInterestEarned is an event emitted when interest is earned for a vault.
message EventInterestEarned {
  // vault_address is the bech32 address of the vault.
  string vault_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // principal is the principal the interest was earned on.
  cosmos.base.v1beta1.Coin principal = 2 [(gogoproto.nullable) = false];
  // rate is the interest rate for the period.
  string rate = 3;
  // time is the payout time in seconds.
  int64 time = 4;
  // interest_earned is the amount of interest earned.
  cosmos.base.v1beta1.Coin interest_earned = 5 [(gogoproto.nullable) = false];
}
